tests/test_files/default/neg/bad_encoding3.s
	restrict r0 10 ; FAIL: attempt to restrict SealRange with a WType
	halt
